# config-share-files

./: .gitignore  README.md
01.OS/Linux/: deploy-server.md  init-check.md
04.server-CICD/Curl-CICD/: README.md
07.others/ntp/: ntp.conf
07.others/proxifier/: direct-web-rules.conf
07.others/scripts/: file_sync.sh  java_errlog_output_zabbix.sh  update-dns.sh
07.others/shutils/: test.sh
07.others/squid/: cachemgr.conf  mime.conf  squid.conf  squid.conf.default
09.src-info/2.Linux系统内核/: 1.基本的操作系统名词和概念.md
1.OS/Linux/: init-check.md
11.algorithms/: README.md
12.MPGA/: MPGA[#1].md  READMD.md
1337.code/: README.md
15.CIFL/H_OS/: Cargo.toml  x86_64-h_os.json
2.server-web/supervisor/: java-templeate.ini
4.server-CICD/Curl-CICD/: Cargo.toml  README.md
4.server-CICD/Curl-CICD/src/: main.rs
4.server-CICD/Curl-CICD/src/utils/scripts/: deploy.sh
4.server-CICD/jenkins/: vue-project.sh
66.temp/: Centos7搭建FTP服务器.md  Centos7配置SFTP服务.md  server_inspect_alone.sh
7.others/git/: 1.git使用特定的id_rsa文件.md
7.others/scripts/: file_sync.sh  half-cicd.sh  update-dns.sh
7.others/shutils/: banner.sh  inwaer.sh  md5.sh  optional_registry.sh  test.sh
7.others/squid/: errorpage.css  squid.conf
9.src-info/1.vue3/: 1.导读-看懂vue3的优化.md
90.daily-shine/: 20240528-ifconfig.md  20240529-linux-router.md  20240531-linux-file-system.md  20240611-google-hacking.md  20240619-linux-highperformance.md  README.md
90V.final-note/: README.md
99.factory-template/1.rust-factory/: Cargo.toml
TMP/Jenkins/: java-tmp-project.sh
templates/Jenkins/: build-java-package.sh  (+4 more)
(+91 files in other folders)
